# chat-exp

./: .env.example  .gitignore  docker-compose.pgvector.yml  package.json
agent-dashboard/: index.html  package.json  tailwind.config.cjs.bak  tailwind.config.ts  vite.config.js
agent-dashboard/src/: App.jsx  index.css  styles.css
agent-dashboard/src/app/: TopBar.jsx  WorkspaceLayout.jsx
server/: Cargo.toml
server/migrations/: 20260217103000_init.sql  20260218120000_flow_cursors.sql  20260219100000_crm.sql  20260220100000_flow_ai_tools.sql  20260221100000_tenant_system.sql  20260222100000_agent_on_messages.sql  20260223100000_bot_profile.sql  20260224100000_user_accounts_workspace_username.sql  20260224110000_channel_model.sql  20260225100000_workspace_profile.sql  20260226100000_bot_runtime_config.sql  20260227120000_drop_inboxes.sql  20260228100000_agent_notifications.sql  20260301100000_session_snooze.sql  20260301103000_remove_closed_status.sql  20260302100000_kb_rag.sql  20260305100000_fix_tags_description.sql  20260306120000_whatsapp_call_logs.sql
server/src/: app.rs  lib.rs  main.rs  prompting.rs  types.rs
server/src/prompts/: ai_grounding_policy.j2  ai_json_format_hint.j2  ai_json_format_hint_basic.j2  ai_json_format_hint_tools.j2  ai_user_content.j2  extract_vars_system.j2  extract_vars_user.j2  flow_ai_fallback_prompt.j2  kb_block.j2  rerank_system.j2  rerank_user.j2  system_prompt.j2  system_prompt_fallback.j2  tools_block.j2
widget-client/: index.html  package.json
widget-client/src/: App.jsx  styles.css
(+17 files in other folders)
